invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gis.h



/*=========================== Typedefs/Structures ==========================*/

typedef int CELL;

typedef double DCELL;



typedef struct
{
    unsigned char r, g, b, a;	/* red, green, blue, and alpha */
} RGBA_Color;


typedef RGBA_Color RGB_Color;